--- a/kerberosV/libexec/Makefile
+++ b/kerberosV/libexec/Makefile
@@ -1,5 +1,5 @@
-# $OpenBSD: Makefile,v 1.2 2001/06/22 16:08:36 hin Exp $
+# $OpenBSD: Makefile,v 1.3 2001/06/25 02:04:49 hin Exp $
 
-SUBDIR=	kdc kadmind
+SUBDIR=	kdc kadmind hprop hpropd ipropd-master ipropd-slave kfd kpasswdd
 
 .include <bsd.subdir.mk>
