--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.36 2001/06/20 16:47:32 millert Exp $
+#	$OpenBSD: Makefile,v 1.37 2001/06/25 05:07:47 angelos Exp $
 #	$NetBSD: Makefile,v 1.4 1996/01/09 03:23:01 thorpej Exp $
 
 #	Makefile for section 9 (kernel function and variable) manual pages.
@@ -7,8 +7,8 @@ MAN=	audio.9 boot.9 bus_dma.9 bus_space.9 \
 	copy.9 crypto.9 ctxsw.9 disk.9 disklabel.9 \
 	dopowerhooks.9 doshutdownhooks.9 fetch.9 fork1.9 \
 	extent.9 hz.9 hzto.9 intro.9 inittodr.9 log.9 kthread.9 \
-	malloc.9 md5.9 microtime.9 panic.9 pfind.9 physio.9 pool.9 \
-	powerhook_establish.9 ppsratecheck.9 printf.9 psignal.9 \
+	malloc.9 mbuf_tags.9 md5.9 microtime.9 panic.9 pfind.9 physio.9 \
+	pool.9 powerhook_establish.9 ppsratecheck.9 printf.9 psignal.9 \
 	ratecheck.9 resettodr.9 random.9 shutdownhook_establish.9 \
 	sleep.9 spl.9 store.9 style.9 time.9 timeout.9 uvm.9 \
 	vm_allocate.9 vm_map_copy.9 vm_deallocate.9 \
