--- a/usr.bin/login/Makefile
+++ b/usr.bin/login/Makefile
@@ -1,13 +1,9 @@
-#	$OpenBSD: Makefile,v 1.19 2001/06/13 20:37:24 millert Exp $
+#	$OpenBSD: Makefile,v 1.20 2001/06/25 05:51:25 art Exp $
 
 PROG=	login
 SRCS=	login.c failedlogin.c
 DPADD=	${LIBUTIL}
 LDADD=	-lutil
-
-.if (${MACHINE_ARCH} == "alpha")
-LDSTATIC=	${STATIC}
-.endif
 
 BINOWN=	root
 BINMODE=4555
