--- a/sys/arch/beagle/conf/Makefile.beagle
+++ b/sys/arch/beagle/conf/Makefile.beagle
@@ -24,7 +24,8 @@ _archdir?=	$S/arch/${_arch}
 INCLUDES=	-nostdinc -I. -I$S -I$S/arch
 CPPFLAGS=	${INCLUDES} ${IDENT} ${PARAM} -D_KERNEL -D__${_mach}__ -MD -MP
 CWARNFLAGS=	-Werror -Wall -Wstrict-prototypes -Wmissing-prototypes \
-		-Wno-main -Wno-uninitialized -Wno-format -Wno-pointer-sign
+		-Wno-main -Wno-uninitialized -Wno-format -Wno-pointer-sign \
+		-Wno-conditional-uninitialized
 #		-Wstack-larger-than-2047
 
 CMACHFLAGS=	-ffreestanding -msoft-float # -march=armv4 -mtune=strongarm
