--- a/sys/arch/i386/stand/mbr/Makefile
+++ b/sys/arch/i386/stand/mbr/Makefile
@@ -1,7 +1,11 @@
-#	$OpenBSD: Makefile,v 1.16 2012/08/29 22:23:08 pascal Exp $
+#	$OpenBSD: Makefile,v 1.17 2013/01/18 03:45:23 jsing Exp $
 #
 
 CC=gcc
+
+S=	${.CURDIR}/../../../..
+SADIR=	${.CURDIR}/..
+
 PROG=	mbr
 SRCS=	mbr.S
 AFLAGS+=-I${.CURDIR} -I${.CURDIR}/../../.. #-Wa,-a
@@ -13,14 +17,12 @@ NOMAN=
 #MAN+=	mbr.8
 
 INSTALL_STRIP=
-SADIR=${.CURDIR}/..
-S=	${.CURDIR}/../../../..
 
 # Uncomment this to make mbr talk to a serial port.
 #CPPFLAGS+=-DSERIAL=0
 
-${PROG}: $(OBJS) $(DPADD)
-	$(LD) $(LDFLAGS) -o $(PROG) $(OBJS) $(LDADD)
+${PROG}: $(OBJS)
+	$(LD) $(LDFLAGS) -o $(PROG) $(OBJS)
 	@size $(PROG)
 	@if [ -x ${.OBJDIR}/${PROG} ]; then \
 		objcopy -O binary ${PROG} ${.OBJDIR}/.tmp;\
