--- a/sys/arch/i386/stand/biosboot/Makefile
+++ b/sys/arch/i386/stand/biosboot/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.24 2013/01/18 03:45:23 jsing Exp $
+#	$OpenBSD: Makefile,v 1.25 2013/01/18 04:10:16 jsing Exp $
 
 CC=gcc
 
@@ -14,6 +14,8 @@ CFLAGS= -no-builtin-asm
 LD=ld
 LDFLAGS=-nostdlib -Ttext 0 -N -x -Bstatic -nopie
 INSTALL_STRIP=
+
+${.CURDIR}/biosboot.S: assym.h
 
 ${PROG}: $(OBJS)
 	@rm -f $(PROG)
