--- a/sys/arch/i386/stand/pxeboot/Makefile
+++ b/sys/arch/i386/stand/pxeboot/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.12 2013/01/18 03:45:23 jsing Exp $
+#	$OpenBSD: Makefile,v 1.13 2013/01/18 04:10:16 jsing Exp $
 
 CC=	gcc
 MAN=	pxeboot.8
@@ -46,6 +46,10 @@ SRCS+=	strlcpy.c
 
 .PATH:	${S}/lib/libz
 SRCS+=	adler32.c crc32.c inflate.c inftrees.c
+
+${.CURDIR}/srt0.S: assym.h
+${SADIR}/libsa/gidt.S: assym.h
+${SADIR}/libsa/pxe_call.S: assym.h
 
 ${PROG}: $(OBJS)
 	$(LD) $(LDFLAGS) -o ${PROG} $(OBJS)
