--- a/sys/arch/i386/stand/boot/Makefile
+++ b/sys/arch/i386/stand/boot/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.48 2013/01/18 04:10:16 jsing Exp $
+#	$OpenBSD: Makefile,v 1.49 2013/01/18 21:09:04 espie Exp $
 
 CC=	gcc
 MAN=	boot.8
@@ -66,8 +66,7 @@ boot.bin: boot
 
 CLEANFILES+= ${PROG}.new
 
-${.CURDIR}/srt0.S: assym.h
-${SADIR}/libsa/gidt.S: assym.h
+.depend srt0.o gidt.o: assym.h
 
 ${PROG}: $(OBJS)
 	$(LD) $(LDFLAGS) -o ${PROG}.new $(OBJS)
