--- a/Makefile.cross
+++ b/Makefile.cross
@@ -179,9 +179,9 @@ ${CROSSBUILDENV}:	${CROSSINCLUDES}
 	done ;\
 	rm -f ${CROSSDIR}/usr/bin/$${a}-clang; \
 	cp /usr/bin/clang ${CROSSDIR}/usr/bin/$${a}-cross-clang; \
-	echo  "#! /bin/sh\n${CROSSDIR}/usr/bin/$${a}-cross-clang -ccc-host-triple $${a} --sysroot ${CROSSDIR} ${CCCROSSOPTS} \"$$""@\"" > ${CROSSDIR}/usr/bin/$${a}-clang; \
+	echo  "#! /bin/sh\n${CROSSDIR}/usr/bin/$${a}-cross-clang -target $${a} --sysroot ${CROSSDIR} ${CCCROSSOPTS} \"$$""@\"" > ${CROSSDIR}/usr/bin/$${a}-clang; \
 	chmod +x ${CROSSDIR}/usr/bin/$${a}-clang; \
-	echo  "#! /bin/sh\n${CROSSDIR}/usr/bin/$${a}-cross-clang -ccc-cxx -ccc-host-triple $${a} --sysroot ${CROSSDIR} ${CCCROSSOPTS} \"$$""@\"" > ${CROSSDIR}/usr/bin/$${a}-clang++; \
+	echo  "#! /bin/sh\n${CROSSDIR}/usr/bin/$${a}-cross-clang -ccc-cxx -target $${a} --sysroot ${CROSSDIR} ${CCCROSSOPTS} \"$$""@\"" > ${CROSSDIR}/usr/bin/$${a}-clang++; \
 	chmod +x ${CROSSDIR}/usr/bin/$${a}-clang++; \
 	rm -f ${CROSSDIR}/usr/bin/$${a}-cpp ${CROSSDIR}/usr/$${a}/bin/cpp; \
 	cp usr.bin/cpp/cpp_clang.sh ${CROSSDIR}/usr/bin/$${a}-cpp; \
