--- a/etc/Makefile
+++ b/etc/Makefile
@@ -338,7 +338,7 @@ moduli.8192:
 	bootblocks ${ALL_KERNELS}
 	
 
-SUBDIR+= etc.amd64 etc.i386
+SUBDIR+= etc.amd64 etc.i386 etc.beagle etc.imx
 
 .include <bsd.subdir.mk>
 .include <bsd.prog.mk>
