--- a/usr.sbin/Makefile
+++ b/usr.sbin/Makefile
@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.166 2013/03/14 11:08:20 mpi Exp $
+#	$OpenBSD: Makefile,v 1.167 2013/05/30 19:18:24 bmercer Exp $
 
 .include <bsd.own.mk>
 
@@ -8,15 +8,15 @@ SUBDIR=	ac accton acpidump adduser apm apmd arp \
 	ftp-proxy fw_update gpioctl hostapd hotplugd ifstated ikectl \
 	inetd iostat iscsictl iscsid \
 	kgmon kvm_mkdb ldapd ldapctl ldpd ldpctl lpr mailwrapper map-mbone \
-	memconfig mopd mrinfo mrouted mtrace mtree ndp netgroup_mkdb nginx \
-	npppctl npppd nsd ntpd openssl ospfctl ospfd ospf6d ospf6ctl pcidump \
-	pkg_add popa3d portmap ppp pppd pppoe procmap pstat pwd_mkdb quot \
-	quotaon rarpd rbootd rdate relayctl relayd repquota rip6query ripctl \
-	ripd rmt route6d rpc.bootparamd rpc.lockd rpc.statd rtadvd rtsold \
-	rwhod sa sasyncd sensorsd sliplogin slstats smtpd snmpctl snmpd spamdb \
-	spray syslogc syslogd sysmerge tcpdrop tcpdump tftp-proxy tftpd \
-	tokenadm tokeninit traceroute traceroute6 trpt usbdevs user vipw \
-	watchdogd wsconscfg wsfontload wsmoused zdump zic
+	memconfig mkuboot mopd mrinfo mrouted mtrace mtree ndp netgroup_mkdb \
+	nginx npppctl npppd nsd ntpd openssl ospfctl ospfd ospf6d ospf6ctl \
+	pcidump pkg_add popa3d portmap ppp pppd pppoe procmap pstat pwd_mkdb \
+	quot quotaon rarpd rbootd rdate relayctl relayd repquota rip6query \
+	ripctl ripd rmt route6d rpc.bootparamd rpc.lockd rpc.statd rtadvd \
+	rtsold rwhod sa sasyncd sensorsd sliplogin slstats smtpd snmpctl \
+	snmpd spamdb spray syslogc syslogd sysmerge tcpdrop tcpdump \
+	tftp-proxy tftpd tokenadm tokeninit traceroute traceroute6 trpt \
+	usbdevs user vipw watchdogd wsconscfg wsfontload wsmoused zdump zic
 
 .if (${YP:L} == "yes")
 SUBDIR+=ypbind ypldap yppoll ypset ypserv
